infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: chaitanya31/my-mongo
        ports:
        - containerPort: 27017
        # volumeMounts:
        # - name: auth-mongo-storage
        #   mountPath: /data/db
      # volumes:
      # - name: auth-mongo-storage
      #   persistentVolumeClaim:
      #     claimName: auth-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
  - port: 27017
    targetPort: 27017
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: auth-mongo-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
