infra/k8s/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: chaitanya31/cart
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
spec:
  selector:
    app: cart
  ports:
  - port: 8080
    targetPort: 8080
