infra/k8s/cart-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: cart-redis-srv
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
