infra/k8s/products-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: chaitanya31/products
---
apiVersion: v1
kind: Service
metadata:
  name: products-srv
spec:
  selector:
    app: products
  ports:
  - port: 8080
    targetPort: 8080
