infra/k8s/products-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-postgres
  template:
    metadata:
      labels:
        app: products-postgres
    spec:
      containers:
      - name: products-postgres
        image: postgres:15.2-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: products-postgres-srv
spec:
  selector:
    app: products-postgres
  ports:
  - port: 5432
    targetPort: 5432
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: products-postgres-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
